--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
     "description": "NYU CIFC APIs and Functions",
     "main": "src/index.ts",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "tsc",
+        "start": "node dist/index.js",
+        "dev": "concurrently \"tsc -w\" \"nodemon dist/index.js\""
     },
     "repository": {
         "type": "git",
@@ -24,14 +27,19 @@
         "@types/google-spreadsheet": "^3.3.0",
         "@typescript-eslint/eslint-plugin": "^5.33.1",
         "@typescript-eslint/parser": "^5.33.1",
+        "concurrently": "^7.3.0",
         "eslint": "^8.22.0",
         "husky": "^8.0.1",
+        "nodemon": "^2.0.19",
         "prettier": "^2.7.1",
         "pretty-quick": "^3.1.3",
         "typescript": "^4.7.4"
     },
     "dependencies": {
-        "google-spreadsheet": "^3.3.0"
+        "dotenv": "^16.0.1",
+        "google-spreadsheet": "^3.3.0",
+        "node-html-parser": "^5.4.2-0",
+        "puppeteer": "^16.2.0"
     },
     "husky": {
         "hooks": {
