--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "tsc",
         "start": "node dist/index.js",
-        "dev": "concurrently \"tsc -w\" \"nodemon dist/index.js\""
+        "dev": "concurrently \"tsc -w\" \"nodemon dist/index.js\"",
+        "generate-club-data": "ts-node src/generate.ts"
     },
     "repository": {
         "type": "git",
