--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
     "name": "cifc",
     "version": "1.0.0",
     "description": "NYU CIFC APIs and Functions",
-    "main": "src/generate-club-data.ts",
+    "main": "src/index.ts",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "tsc",
         "start": "node dist/index.js",
         "dev": "concurrently \"tsc -w\" \"nodemon dist/index.js\"",
-        "generate-club-data": "node dist/generate-club-data.js"
+        "generate-club-data": "node dist/index.js"
     },
     "repository": {
         "type": "git",
