--- a/.github/workflows/club_data_gen.yml
+++ b/.github/workflows/club_data_gen.yml
@@ -3,7 +3,7 @@ on:
     push:
         branches:
             - main
-    workflow_dispatch:
+    workflow_dispatch
 
 concurrency:
     group: ${{ github.workflow }}-${{ github.ref }}
